--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.container{
+:root {
+  --circle: 'Circe Rounded';
+  --rob: 'Roboto';
+}
+
+body {
+  font-family: var(--circle);
+}
+
+.container {
   max-width: 1200px;
   width: 100%;
   margin-left: auto;
