--- a/css/style.css
+++ b/css/style.css
@@ -21,4 +21,76 @@ body {
   padding-left: 10px;
   padding-right: 10px;
 }
+.begzod__block{
+  display: flex;
+  gap: 2px;
+  margin-top: 20px;
+}
 
+.begzod__item:nth-of-type(1){
+  background-image: url(../image/img.png);
+  width: 590px;
+  height: 300px;
+  padding-top: 40px;
+  padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.begzod__item__title{
+  font-size: 36px;
+  color: white;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.begzod__item__text{
+  font-size: 18px;
+  color: white;
+  max-width: 345px;
+  line-height: 144%;
+}
+
+.btn{
+  padding: 11px 30px;
+  background: #FD9339;
+  border-radius: 5px;
+  color: white;
+  text-decoration: none;
+  margin-top: 82px;
+}
+
+.begzod__item:nth-of-type(2){
+  background-image: url(../image/img1.png);
+  width: 293px;
+  height: 300px;
+  padding-left: 14px;
+  padding-bottom: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.begzod__item__titlee{
+  color: #FD9339;
+
+}
+
+.bezgod__item__textt{
+  font-size: 22px;
+  font-weight: 800;
+  text-transform: uppercase;
+  color: white;
+}
+
+.begzod__item:nth-of-type(3){
+  background-image: url(../image/img2.png);
+  width: 293px;
+  height: 300px;
+  padding-left: 14px;
+  padding-bottom: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
